--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,37 @@
 {
-  "name": "kaptam-cart-server",
-  "version": "1.0.0",
-  "description": "Shopping cart backend for Kaptam Gamers",
-  "main": "index.js",
+  "name": "kaptam-reservation-server",
+  "version": "2.0.0",
+  "description": "Kaptam game reservation system backend with admin dashboard",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "setup-admin": "node setup-admin.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "reservation",
+    "games",
+    "kaptam",
+    "booking"
+  ],
+  "author": "Kaptam Gamers ry",
+  "license": "ISC",
   "dependencies": {
-    "sql.js": "^1.10.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.10"
+    "better-sqlite3": "^9.2.2",
+    "nodemailer": "^6.9.7",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.1",
+    "express-rate-limit": "^7.1.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=16.0.0"
   }
 }
